improve exceptions and return response with xml request sent on exception if possible closes #14